@@ -13,6 +13,8 @@ public:
   virtual bool GetDirectory(const CStdString& strPath, CFileItemList &items);
   virtual bool Exists(const CStdString& strPath);
 
+  bool GetPathes(const CStdString& strPath, vector<CStdString>& vecPaths);
+
 protected:
   bool GetTypeAndBookmark(const CStdString& strPath, CStdString& strType, CStdString& strBookmark);
   bool GetShares(const CStdString& strType, VECSHARES& vecShares);
